Chris - May 17, 2014
	* Removed obsolete ONHOTPLUG reference from README

jim - June 4, 2009
	* Fixed Bootlogging Ticket #211.

jim - February 3, 2009
	* Updated DHCPCD service.

jim - February 2, 2009
	* Fixed Makefile
	* Moved Network to install-network

jim - January 31, 2009
	* Moved syklogd to cblfs
	* Added rsyslog to clfs

jim - January 14, 2009
	* Fixed Netboot Udev Setup
	* Remove all script directories for netboot

jim - January 8, 2009
	* Remove Console Script
	* Added i18n Script

jim - October 24, 2007
	* Merged Netboot Scripts

jim - October 23, 2007
	* Merged BLFS changes from SVN
	* Merged LFS changes from SVN

jim - October 16, 2007
	* Merged BLFS scripts
	* Fixed Makefile
	* Changed install to install-bootscripts
	* Changed minimal to install-minimal

jim - September 10, 2007
	* Moved udev script from udev package since udev package is no longer required

jim - October 31, 2006
	* Cleaned up bootscripts removed uneeded patch
	* Renamed lfs dir to clfs to keep it with our standards
	* Added the ability to have network subinterfaces

jim - October 24, 2006
	* Added IP Address of Interface on IFUP Error message
	* Fixed Logging. Would hang because of an empty variable

jim - September 24, 2006
        * Changed LFS to CLFS
	* Added Logging Feature back to the bootscripts

jim - September 2, 2006
        * Add a check to see if the interface is already disabled
        * Add a check to see if the interface is already setup

jim - August 27, 2006
	* Added the same change to ifdown script. 

jeremy - August 21, 2006
	* Logic error in ifup script - output of ip link show always shows
	  all interfaces - added a grep to only look at the interface we're
	  interested in

jim - July 27, 2006
	* Corrected install-minimal symlinks

jim - June 29, 2006
	* Disable interactive Prompts
	* Added Check to see if /etc/sysconfig/createfiles is available

jim - May 15, 2006
	* Hide all the output information from the LCD Program
	* Added support for 1 line LCD screens