@@ -1,5 +1,6 @@
 Chris - May 17, 2014
 	* Removed obsolete ONHOTPLUG reference from README
+	* Removed obsolete commands to create and populate /lib/udev/devices
 
 jim - June 4, 2009
 	* Fixed Bootlogging Ticket #211.
